--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link href="https://fonts.googleapis.com/css?family=Cabin|Open+Sans+Condensed:300|Roboto" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/responsive.css">
+
+  <link rel="icon" href="./img/favicon-256.png" type="image/png" sizes="16x16">
   <title>Aditya Agarwal</title>
 </head>
 
