--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <h1 class="project-title">Pixel Art Maker</h1>
             <img src="./img/pixelartmaker.jpg" alt="JERCR MUN" class="project-img">
             <h2 class="description">Description</h2>
-            <p class="project-discription">Pixel art maker is art game in which user create a grid of his desire <br>and color it with multiple colors.</p>
+            <p class="project-discription">Pixel art maker is art game in which user create a grid of his desire and color it with multiple colors.</p>
             <a class="project-link" href="https://codepen.io/adityaagarwal/full/GQeGem">Check it here!</a>
           </div>
 
@@ -91,8 +91,7 @@
             <h1 class="project-title">Public Addressing System</h1>
             <img src="./img/pas.jpg" alt="JERCR MUN" class="project-img">
             <h2 class="description">Description</h2>
-            <p class="project-discription">This is a hackathon project by team codecore. It is solution of problem that are faced by passengers
-              <br/> due to inappropriate announcing system at railway stations.</p>
+            <p class="project-discription">This is hackathon project presented by team Codecore at JECRC hackathon 1.0</p>
             <a class="project-link" href="https://codecore.000webhost.com">Check it here!</a>
           </div>
 
