alt attribute added and googleapi request is fixed

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link href="https://fonts.googleapis.com/css?family=Cabin|Open+Sans+Condensed:300|Roboto" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/responsive.css">
 
@@ -47,7 +47,7 @@
             <source srcset="./img/background-720*1280.jpg" media="(max-width:700px)">
             <source srcset="./img/background-360*640.jpg" media="(max-width:360px)">
 
-            <img class="coding" src="./img/background 1920.jpg" alt="">
+            <img class="coding" src="./img/background-1920.jpg" alt="coding picture">
           </picture>
         </div>
       </section>
