add offline capability to the app

--- a/index.html
+++ b/index.html
@@ -108,7 +108,6 @@
       </div>
     </div>
   </footer>
-
   <script>
     /*
      * Open the drawer when the menu ison is clicked.
@@ -125,6 +124,7 @@
       drawer.classList.remove('open');
     });
   </script>
+  <script src='./js/indexController.js' type="text/javascript"></script>
 </body>
 
 </html>
